# GhostAI_DLP

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .trufflehog-exclude.txt  .trufflehogignore  24_7_REDTEAM_GUIDE.md  AI_MODELS.md  ARCHITECTURE.md  CONTINUOUS_LEARNING.md  CRITICAL_FIXES_SUMMARY.md  DEPLOYMENT.md  Dockerfile  Dockerfile.dashboard  Dockerfile.dev  FALSE_POSITIVE_ANALYSIS.md  FALSE_POSITIVE_FIX_REPORT.md  FALSE_POSITIVE_FIX_VALIDATION.md  FINAL_FALSE_POSITIVE_SUMMARY.md  HIGH_PRIORITY_FIXES_SUMMARY.md  IMAGE_PDF_EXPLOIT_DETECTION_SUMMARY.md  LICENSE  MONITORING.md  Makefile  PERFORMANCE.md  PERFORMANCE_REPORT.md  QUICK_TESTS.md  README-Docker.md  README.md  README_REDTEAM_BERT.md  REALTIME_LOGGING.md  SCANNER_FIXES.md  SCANNER_TECH.md  SECURITY.md  STATUS_UPDATE.md  STRESS_TEST_SUMMARY.md  TECHNICAL_README.md  Transformer_Attacks.ipynb  check_redteam_status.sh  cleanup_modal.py  (+79 more)
.github/workflows/: dlp.yml
alembic/: env.py
alembic/versions/: 092a2a33efbe_baseline.py  add_realtime_logging_fields.py
api/: heuristics.py  schemas.py
api/routers/: risk.py
dashboard/: app.py
data/: bert_jailbreak_model.pkl
datasets/: blob_risk.yaml  code_risk.yaml  injection_risk.yaml  keyword_risk.yaml  secret_risk.yaml  sql_risk.yaml
demo_rag/: README.md  simple_jinja_demo.py
demo_rag/templates/: api_docs.jinja  code_review.jinja
ghostai_env/: pyvenv.cfg
heuristics/: utils.py
heuristics/detectors/: __init__.py  blobs.py  entropy_shape.py  keywords.py
heuristics/types/: redact_rules.yaml  redactor_types.py  types.py
scripts/: curl_samples.sh
src/: models.py  normalize.py  normalize_reports.py  policy.py  upload_results.py
src/api/: heuristics.py
src/api/routers/: risk.py
src/automate_cli_calls/: automate_prompts.py
src/cli/: auto_cli.py  cli.py  common.py
src/config/: scanners.yaml
src/ghostai/: __init__.py  __main__.py  database_logger.py  database_logger_sqlite.py  normalize.py  pyproject.toml  redis_cache.py
src/ghostai/config/: scanners.yaml
src/ghostai/demo_rag/: README.md  app.py  demo.sh  requirements.txt  run.sh
src/ghostai/demo_rag/templates/: incident_report.jinja  leak_payload.jinja  safe_prompt.jinja  support_ticket.jinja
src/ghostai/demo_rag/tests/: malicious.sh  safe.sh
src/ghostai/pipeline/: pipeline.py
src/ghostai/proxy_api/: firewall.py  proxy.py
src/ghostai/redteam/: __init__.py  continuous_learning.py  redteam_engine.py  vector_rag.py
src/ghostai/scanners/: bert_jailbreak_scanner.py  falcon.py  gitleaks_scanner.py  image_exploit_scanner.py  incremental_bert.py  pdf_exploit_scanner.py  presidio_scanner.py  prompt_guard2_scanner.py  regex_secrets_scanner.py  trufflehog_scanner.py
src/ghostai/server/: mcp_server.py
src/heuristics/: config.py  engine.py
src/heuristics/api/: app.py  heuristics.py  requirements.txt  schemas.py
src/heuristics/detectors/: code_risks.py  redactor.py  secrets.py
src/heuristics/tests/: test_normalize.py  test_policy_engine.py  test_presidio.py  test_scanresult.py  test_trufflehog.py
src/heuristics/types/: rule_types.py
src/pipeline/: pipeline.py
src/proxy_api/: proxy.py
src/scanners/: base.py  gitleaks_scanner.py  presidio_scanner.py  prompt_guard2_scanner.py  trufflehog_scanner.py
src/server/: flask_app.py
src/tests/: test_gitleaks.py  test_normalize.py  test_policy.py  test_prompt_guard2.py  test_trufflehog.py
steps/: README.md
tests/: conftest.py  test_cli.py  test_import.py  test_performance.py  test_presidio_engine.py  test_proxy.py
