[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostai-dlp"
version = "0.1.0"
description = "GhostAI DLP with CLI and Flask API"
authors = [
  { name = "Daniel Leon Silva" }
]
dependencies = [
  "flask",
  "numpy<2.0",
  "presidio-analyzer>=2.2.360",
  "presidio-anonymizer>=2.2.360",
  "requests",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["cli", "api"]

[project.scripts]
ghostai-cli = "cli.cli:main"
