[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostai-dlp"
version = "0.1.0"
requires-python = ">=3.11"
description = "GhostAI DLP with CLI and Flask API"
authors = [
  { name = "Daniel Leon Silva" }
]
dependencies = [
  "numpy<2.0",
  "presidio-analyzer>=2.2.360",
  "presidio-anonymizer>=2.2.360",
  "pydantic>=2,<3",
  "pyyaml>=6",
  "sqlalchemy>=2.0",
  "rq>=2.6",
  "flask-rq2>=18.3",
  "python-dotenv>=1.0",
  "setuptools"
  # only include this if you truly use it
  # "auto-mix-prep==0.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["cli", "api"]

[project.scripts]
ghostai-cli = "cli.cli:main"
