[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostai"
version = "0.1.0"
description = "GhostAI SDK — Unified firewall & GenAI Security Scanning Pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "numpy<2.0",
    "thinc<8.3",
    "spacy==3.7.4",
    "presidio-analyzer==2.2.360",
    "presidio-anonymizer==2.2.360",
    "flask-rq2>=18.3",
    "rq>=2.6",
    "sqlalchemy>=2.0",
    "huggingface-hub>=0.16.0",
    "protobuf<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-flask>=1.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
