[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostai"
version = "0.1.0"
description = "GhostAI SDK — Unified DLP & GenAI Security Scanning Pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "pyyaml",
    "requests",
    "pydantic",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]