[build-system]
requires = ["hatchling>=1.20.0"]
build-backend = "hatchling.build"

[project]
name = "ghostai"
version = "0.1.0"
description = "GhostAI SDK — Unified firewall & GenAI Security Scanning Pipeline"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Radwan Jama" }]

# 👇 Core runtime dependencies
dependencies = [
  "flask>=3.0,<4",
  "pyyaml>=6.0,<7",
  "requests>=2.32,<3",
  "pydantic>=2.7,<3",
  "huggingface-hub>=0.24,<1",
  "transformers>=4.40,<5",
  "python-dotenv>=1.0,<2",
  "presidio-analyzer==2.2.360",
  "presidio-anonymizer==2.2.360",
  "flask-rq2==18.3",
  "rq==2.6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "black>=24.0.0",
  "isort>=5.13.0",
  "torch>=2.3.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
]

[project.scripts]
ghostai = "ghostai.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
